--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
         integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <title>Rosie</title>
+        <link rel="stylesheet" href="assets/css/style.css">
+
+    <title>Ngozi</title>
 </head>
 <body>
     <!--Header-->
     <header>
-        Hello world
+        <div class="row">
+            <a class="col-md-4 logo" href="index.html"></a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Ngozi Omenka</h1>
+                        <h2 class="title">Full Stack Developer</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </header>
     <!--Section-->
     <section></section>
