--- a/index.html
+++ b/index.html
@@ -49,7 +49,46 @@
     </header>
     <!--Section-->
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Personal Info</h3>
+                    </div>
+                </div>
+                <div personal-info-item>
+                    <div class="key">
+                        <p class="uppercase">Name:</p>
+                    </div>
+                    <div class="value">
+                        <p class="">Ngozi Omenka/p>
+                    </div>
+                </div>
+                <div personal-info-item>
+                    <div class="key">
+                        <p class="uppercase">Address:</p>
+                    </div>
+                    <div class="value">
+                        <p class="">Frejs väg 4 Norsborg, Stockholm</p>
+                    </div>
+                </div>
+                <div personal-info-item>
+                    <div class="key">
+                        <p class="uppercase">Phone:</p>
+                    </div>
+                    <div class="value">
+                        <p class="">+467 64408 694</p>
+                    </div>
+                </div>
+                <div personal-info-item>
+                    <div class="key">
+                        <p class="uppercase">Email:</p>
+                    </div>
+                    <div class="value">
+                        <p class="">dev.ngozi@gmail.com</p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-8 bg-color-three-reason section-column">
                 <div class="row">
                     <div class="col">
