Add resume page content

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
                         <h3 class="section-heading uppercase">Personal Info</h3>
                     </div>
                 </div>
-                <div personal-info-item>
+                <div class="personal-info-item">
                     <div class="key">
                         <p class="uppercase">Name:</p>
                     </div>
                     <div class="value">
-                        <p class="">Ngozi Omenka/p>
+                        <p class="">Ngozi Omenka</p>
                     </div>
                 </div>
-                <div personal-info-item>
+                <div class="personal-info-item">
                     <div class="key">
                         <p class="uppercase">Address:</p>
                     </div>
@@ -72,7 +72,7 @@
                         <p class="">Frejs väg 4 Norsborg, Stockholm</p>
                     </div>
                 </div>
-                <div personal-info-item>
+                <div class="personal-info-item">
                     <div class="key">
                         <p class="uppercase">Phone:</p>
                     </div>
@@ -80,7 +80,7 @@
                         <p class="">+467 64408 694</p>
                     </div>
                 </div>
-                <div personal-info-item>
+                <div class="personal-info-item">
                     <div class="key">
                         <p class="uppercase">Email:</p>
                     </div>
