--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
             <div class="col-md-8 bg-color-three-reason section-column">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">Skills</h3>
+                        <h3 class="section-heading uppercase">My Skills</h3>
                     </div>
                 </div>
                 <!-- Reason to hire me section -->
@@ -72,8 +72,7 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
-                                <p>I'm a skilled Full Stack Developer with a wealth of diverse life and technical
-                                    experience that I bring to every project.
+                                <p>As a Frontend Developer, I Focus on creating user interfaces and works primarily with HTML, CSS and JavaScript.
                                 </p>
                             </div>
                         </div>
@@ -85,17 +84,55 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
-                                <p>I follow form as well as function. I know that the aesthetics of effective design
-                                    combined with application speed, security and reliability combine create a great user
-                                    expericence
+                                <p>As Backend developer I am Responsible for server and database related tasks and works 
+                                    with programming languages ​​such as PHP,
+                                Ruby, Python or Java.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="row progress-section">
+                <div class="col">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" 
+                        style="width: 90%;">
+                    <span classsr-only>90% complete</span>
+                </div>
+                    <span class="progress-type">HTML / HTML5</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 80%;">
+                            <span classsr-only>80% complete</span>
+                        </div>
+                        <span class="progress-type">CSS / CSS3</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 70%;">
+                            <span classsr-only>70% complete</span>
+                        </div>
+                        <span class="progress-type">JavaScript / jQuery</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 80%;">
+                            <span classsr-only>80% complete</span>
+                        </div>
+                        <span class="progress-type">Django / Python</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 80%;">
+                            <span classsr-only>80% complete</span>
+                        </div>
+                        <span class="progress-type">SQL / NoSQL</span>
+                    </div>
+                </div>
             </div>
         </div>
-    
+        </div>
     </section>
 
 
