--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom"
+                  <a href="index.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-home" aria-hidden="true"></i
                     ><span>Home</span></a
                   >
@@ -49,7 +49,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom"
+                  <a href="resume.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
                     ><span>Resume</span></a
                   >
@@ -57,7 +57,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom"
+                  <a href="contact.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-comment" aria-hidden="true"></i
                     ><span>Contact</span></a
                   >
@@ -65,7 +65,10 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom"
+                  <a
+                    href="assets/cv/full-stack-dev-cv.jpg"
+                    target="_blank"
+                    class="hvr-sweep-to-bottom"
                     ><i class="fa fa-download" aria-hidden="true"></i
                     ><span>Download</span></a
                   >
@@ -85,25 +88,25 @@
               <h3 class="history-heading uppercase">Work History</h3>
             </div>
           </div>
-<!-- Work History-->
+          <!-- Work History-->
           <div class="history-items">
-          <div class="timeline-item" data-dates="02/2010 - 04/2013">
-            <h4>Customer service (H&M)</h4>
-            <p>Shop attendant</p>
+            <div class="timeline-item" data-dates="02/2010 - 04/2013">
+              <h4>Customer service (H&M)</h4>
+              <p>Shop attendant</p>
+            </div>
+            <div class="timeline-item" data-dates="05/2013 - 09/2017">
+              <h4>Special educator to kids with intellectual disability</h4>
+              <p>Fruängens school</p>
+            </div>
+            <div class="timeline-item" data-dates="01/2014 - 12/2019">
+              <h4>Product manager</h4>
+              <p>Juice Plus</p>
+            </div>
+            <div class="timeline-item" data-dates="06/2020 - 10/2023">
+              <h4>National college of Art and Design (NCAD)</h4>
+              <p>Sculptor in redidence</p>
+            </div>
           </div>
-          <div class="timeline-item" data-dates="05/2013 - 09/2017">
-            <h4>Special educator to kids with intellectual disability</h4>
-            <p>Fruängens school</p>
-          </div>
-          <div class="timeline-item" data-dates="01/2014 - 12/2019">
-            <h4>Product manager</h4>
-            <p>Juice Plus</p>
-          </div>
-          <div class="timeline-item" data-dates="06/2020 - 10/2023">
-            <h4>National college of Art and Design (NCAD)</h4>
-            <p>Sculptor in redidence</p>
-          </div>
-        </div>
         </div>
         <div class="col-md-8 bg-color-three-reason section-column">
           <div class="row">
@@ -233,7 +236,11 @@
           <h5 class="uppercase general-sub">Download CV</h5>
           <p class="inline-block">
             Need a printable version of my CV? Download it here.
-            <a href="#" target="_blank" class="cv-pdf">
+            <a
+              href="assets/cv/full-stack-dev-cv.jpg"
+              target="_blank"
+              class="cv-pdf"
+            >
               <i class="fa fa-download" aria-hidden="true"></i>
               <span class="sr-only">Download link.</span>
             </a>
