--- a/index.html
+++ b/index.html
@@ -248,6 +248,12 @@
         </div>
       </div>
     </footer>
+
+    <!-- API -->
+    <script>
+        var APIKey = "AIzaSyC4OA2ImKxUOVroOemlRyJVv9Kl1YITrYc";
+    </script>
+    
     <!-- Font Awesom kit -->
     <script
       src="https://kit.fontawesome.com/a6f48824c3.js"
