Add userdata in github information.js

--- a/interests.html
+++ b/interests.html
@@ -196,6 +196,7 @@
         </div>
 
     </footer>
+<!-- Maps -->
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4OA2ImKxUOVroOemlRyJVv9Kl1YITrYc&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
