--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,14 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>Ngozi</title>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("vPuA8px6eSnASU0DByBEv");
+   })();
+</script>
   </head>
   <body>
     <!--Header-->
@@ -88,7 +96,7 @@
           </h3>
           <h5 class="uppercase text-center">Lets's work together!</h5>
           <div class="center-form">
-            <form>
+            <form onsubmit="return sendMail(this);">
               <input
                 type="text"
                 name="name"
@@ -203,5 +211,6 @@
       src="https://kit.fontawesome.com/a6f48824c3.js"
       crossorigin="anonymous"
     ></script>
+    <script src="assets/js/sendEmail.js"></script>
   </body>
 </html>
